[package]
name = "radio-at86rf23x"
description = "Driver for the Microchip at86rf23x series of 2.4GHz RF ICs"
repository = "https://github.com/rust-iot/rust-radio-at86rf23x"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
license = "MPL-2.0"
version = "0.1.0"
edition = "2021"

[features]
util = ["structopt", "tracing", "tracing-subscriber", "humantime", "driver-pal/hal", "thiserror", "anyhow", "radio/helpers" ]
default = [ "util", "driver-pal/hal-cp2130", "driver-pal/hal-linux" ]

[dependencies]
radio = "0.10.0"
embedded-hal = "1.0.0-alpha.5"

driver-pal = { version = "0.8.0-alpha.5", default_features = false }

structopt = { version = "0.3.25", optional = true }
thiserror = { version = "1.0.30", optional = true }
humantime = { version = "2.1.0", optional = true }

tracing = { version = "0.1.25", optional = true }
tracing-subscriber = { version = "0.3.4", optional = true }
serde = { version = "1.0.130", optional = true }
defmt = { version = "0.2.3", optional = true }
anyhow = { version = "1.0.44", optional = true }
log = "0.4.14"
bitflags = "1.3.2"
strum_macros = "0.22.0"
num_enum = { version = "0.5.4", default-features = false }
modular-bitfield = "0.11.2"


[[bin]]
name = "at86rf23x-util"
path = "src/util/main.rs"
required-features = [ "util" ]

[patch.crates-io]
#radio = { path = "../radio-hal" }
